<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Exoplayer widget view-->
    <com.google.android.exoplayer2.ui.StyledPlayerView
        android:id="@+id/player_view_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:resize_mode="fill"
        />

    <ImageView
        android:id="@+id/logo_streamax"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_streamax"
        android:contentDescription="@string/app_name"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_code"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_streamax"
        android:layout_marginTop="30dp"
        android:hint="@string/code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_code"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_streamax"
        android:text="@string/login_button_text"
        style="?attr/materialButtonOutlinedStyle"
        android:background="@color/green_streamax"
        />




</androidx.constraintlayout.widget.ConstraintLayout>