<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/menu_title"
        android:textSize="50sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/green_streamax"/>



    <RelativeLayout
        android:id="@+id/relative_layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/textview_videos"
                    app:layout_constraintTop_toTopOf="@id/constraintLayout_left"
                    app:layout_constraintStart_toStartOf="@id/constraintLayout_left"
                    app:layout_constraintEnd_toEndOf="@id/constraintLayout_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_button"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"
                    />

                <Button
                    app:layout_constraintTop_toBottomOf="@id/textview_videos" 
                    app:layout_constraintStart_toStartOf="@id/constraintLayout_left"
                    android:id="@+id/videos_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_streamax"
                    android:text="@string/btn_flow"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp">
                
                <TextView
                    app:layout_constraintStart_toStartOf="@id/constraintLayout_right"
                    app:layout_constraintEnd_toEndOf="@id/constraintLayout_right"
                    app:layout_constraintTop_toTopOf="@id/constraintLayout_right"
                    android:id="@+id/textview_audios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_button"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/black"/>


                <Button
                    app:layout_constraintTop_toBottomOf="@id/textview_audios"
                    app:layout_constraintEnd_toEndOf="@id/constraintLayout_right"
                    app:layout_constraintStart_toStartOf="@id/constraintLayout_right"
                    android:id="@+id/audio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_streamax"
                    android:text="@string/btn_flow"/>
                
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>




    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearlayout_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout_buttons">

        <TextView
            android:fontFamily="@font/poppins"
            android:text="@string/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text=""
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_device_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text=""
            android:textColor="@color/black"/>



    </LinearLayout>
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="150dp"
        android:layout_height="84dp"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_device_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/gif_test" />


</androidx.constraintlayout.widget.ConstraintLayout>